--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
 		"type": "git",
 		"url": "https://github.com/DominicVonk/VSCode-Parameter-Hints.git"
 	},
+	"scripts": {
+		"package": "npx vsce package",
+		"publish": "npx vsce publish",
+		"vscode:prepublish": "webpack --mode production",
+		"compile": "webpack --mode none",
+		"watch": "webpack --mode none --watch",
+		"postinstall": "node node_modules/vscode/bin/install",
+		"just-test": "node node_modules/vscode/bin/test",
+		"test-compile": "npm run compile",
+		"test": "npm run test-compile && node node_modules/vscode/bin/test"
+	},
 	"engines": {
 		"vscode": "^1.47.0"
 	},
@@ -45,6 +56,26 @@
 							"php",
 							"javascript"
 						]
+					},
+					"parameterHints.paddingVertical": {
+						"type": "number",
+						"description": "Padding Vertical",
+						"default": 1
+					},
+					"parameterHints.paddingHorizontal": {
+						"type": "number",
+						"description": "Padding Horizontal",
+						"default": 4
+					},
+					"parameterHints.marginVertical": {
+						"type": "number",
+						"description": "Margin Vertical",
+						"default": 0
+					},
+					"parameterHints.marginHorizontal": {
+						"type": "number",
+						"description": "Margin Horizontal",
+						"default": 2
 					}
 				}
 			}
@@ -70,7 +101,7 @@
 			}
 		]
 	},
-	"main": "./src/extension.js",
+	"main": "./dist/extension.js",
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
@@ -79,13 +110,16 @@
 		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
-		"vscode-test": "^1.3.0"
+		"vscode-test": "^1.3.0",
+		"webpack": "^4.44.1",
+		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
 		"dash-ast": "^2.0.1",
 		"escaya": "0.0.17",
 		"php-parser": "^3.0.1",
 		"phptoast": "^8.0.0",
+		"sha1": "^1.1.1",
 		"typescript-parser": "^2.6.1"
 	}
 }
