--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
 		"vscode:prepublish": "webpack --mode production",
 		"compile": "webpack --mode none",
 		"watch": "webpack --mode none --watch",
-		"postinstall": "node node_modules/vscode/bin/install",
-		"just-test": "node node_modules/vscode/bin/test",
-		"test-compile": "npm run compile",
-		"test": "npm run test-compile && node node_modules/vscode/bin/test"
+		"test-compile": "npm run compile"
 	},
 	"engines": {
 		"vscode": "^1.47.0"
@@ -51,11 +48,26 @@
 						"description": "Enable Languages",
 						"default": [
 							"php",
-							"javascript"
+							"javascript",
+							"typescript",
+							"javascriptreact",
+							"typescriptreact"
 						],
 						"enum": [
 							"php",
-							"javascript"
+							"javascript",
+							"typescript",
+							"javascriptreact",
+							"typescriptreact"
+						]
+					},
+					"parameterHints.hintingType": {
+						"type": "string",
+						"default": "variableAndType",
+						"enum": [
+							"typeOnly",
+							"variableAndType",
+							"variableOnly"
 						]
 					},
 					"parameterHints.padding": {
@@ -92,25 +104,22 @@
 			}
 		]
 	},
-	"main": "./dist/extension.js",
+	"main": "./src/extension.js",
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
-		"@types/vscode": "^1.47.0",
+		"@types/vscode": "^1.48.0",
 		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
-		"vscode-test": "^1.3.0",
+		"typescript": "^4.1.0-dev.20200815",
+		"vscode-test": "^1.4.0",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
 		"dash-ast": "^2.0.1",
-		"escaya": "0.0.17",
-		"php-parser": "^3.0.1",
-		"phptoast": "^8.0.0",
-		"sha1": "^1.1.1",
-		"typescript-parser": "^2.6.1"
+		"php-parser": "^3.0.1"
 	}
 }
