Added ability to override css styling for hints

--- a/package.json
+++ b/package.json
@@ -79,6 +79,11 @@
 						"type": "string",
 						"description": "Margin",
 						"default": "0 1"
+					},
+					"parameterHints.style": {
+						"type": "object",
+						"description": "Override styling for hints",
+						"default": {}
 					}
 				}
 			}
